--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mantine/dates": "^7.5.2",
     "@mantine/hooks": "^7.5.2",
     "axios": "^1.6.3",
+    "class-transformer": "^0.5.1",
     "classnames": "^2.5.1",
     "date-fns": "^3.2.0",
     "dayjs": "^1.11.10",
@@ -29,6 +30,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1",
+    "reflect-metadata": "^0.2.2",
+    "typeorm": "^0.3.20",
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
