--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "dayjs": "^1.11.10",
     "iconv-lite": "^0.6.3",
     "lodash": "^4.17.21",
-    "mobile-kit": "file:../bahasa/src/kit",
+    "mobile-kit": "file:../ip-kit/src",
     "next": "14.1.0",
     "pg": "^8.11.3",
     "react": "^18",
@@ -41,6 +41,7 @@
     "@types/xml2js": "^0.4.14",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
+    "postcss-mixins": "^10.0.1",
     "postcss-nested": "^6.0.1",
     "postcss-preset-mantine": "^1.13.0",
     "postcss-simple-vars": "^7.0.1",
